--- a/public/index.html
+++ b/public/index.html
@@ -33,26 +33,24 @@
   <!--[if !IE]><!-->
   <script src="components/bootstrap-drawer/dist/js/drawer.min.js"></script>
   <!--<![endif]-->
-  <script src="components/mediaelement/build/mediaelement-and-player.min.js"></script>
-  <script>
-    $(function () {
-      $('#backgroundVideoPlayer').mediaelementplayer();
-    });
-  </script>
 
   <script src="/index.js"></script>
 
   <style>
-    .mejs-offscreen {
-      display: none !important;
-    }
     #backgroundVideo {
       position: absolute;
       top: 0px;
       left: 0px;
       width: 100%;
+      max-height: 700px;
       z-index: -1;
       overflow: hidden;
+    }
+    #backgroundVideo img {
+      width: 100%;
+      height: auto;
+      min-height: 700px;
+      min-width: 1250px;
     }
     .video-glass {
       position: absolute;
@@ -65,10 +63,16 @@
     .full-width-video {
       width: 100%;
       height: 100%;
+      min-width: 1250px;
+      min-height: 700px;
     }
   </style>
-  <!--[if IE]>
+  <!-- BACKGROUND VIDEO FALLBACK -->
+  <!--[if lt IE 9]>
   <style type="text/css">
+    .mejs-offscreen {
+      display: none !important;
+    }
     .video-glass {
       background:transparent;
       filter:progid:DXImageTransform.Microsoft.gradient(startColorstr=#7F39AEA6,endColorstr=#7F39AEA6);
@@ -99,6 +103,18 @@
   <style>
     header {
       margin-top: 120px;
+      text-align: center;
+      padding-left: 15%;
+      padding-right: 15%;
+    }
+    header h3 {
+      margin: 20px 0px 20px 0px;
+    }
+    header figure img {
+      display: block;
+      margin: auto;
+      padding-top: 30px;
+      width: 315px;
     }
   </style>
   <script>
@@ -108,18 +124,18 @@
 <body class="has-drawer">
 <!-- BACK GROUND -->
 <div id="backgroundVideo">
-  <video id="backgroundVideoPlayer" playsinline="true" autoplay="true" muted="true" loop="true" poster="img/video.png" width="100%" height="100%">
+  <!-- BACKGROUND VIDEO FALLBACK -->
+  <!--[if lt IE 9]>
+  <img src="img/video.png"/>
+  <![endif]-->
+  <!--[if gt IE 8]> <!-- -->
+  <video id="backgroundVideoPlayer" playsinline="true" autoplay="true" muted="true" loop="true" poster="img/video.png" class="full-width-video" width="100%" height="100%">
     <source src="img/background-video.mp4" type="video/mp4"/>
     <source src="img/background-video.webm" type="video/webm"/>
     <source src="img/background-video.ogv" type="video/ogg"/>
-    <object type="application/x-shockwave-flash" data="http://releases.flowplayer.org/swf/flowplayer-3.2.18.swf" width="100%" height="100%">
-      <param name="movie" value="http://releases.flowplayer.org/swf/flowplayer-3.2.18.swf"/>
-      <param name="allowFullScreen" value="true"/>
-      <param name="wmode" value="transparent"/>
-      <param name="flashVars" value="config={'playlist':['img%2Fvideo.png',{'url':'img%2Fbackground-video.mp4','autoPlay':true}]}"/>
-      <img alt="" src="img/video.png" class="full-width-video" title="Happy Data Science"/>
-    </object>
   </video>
+  <!-- <![endif]-->
+
   <div class="video-glass"></div>
 </div>
 <!-- drawer start -->
@@ -181,9 +197,9 @@
   <header>
     <section>
       <figure>
-        <h1>Head start SILICON VALLEY</h1>
+        <img src="img/logo2.png">
       </figure>
-      <h2>당신의 미래를 바꿉니다.</h2>
+      <h1>당신의 미래를 바꿉니다.</h1>
       <h3>Headstart는 Data Science에 관한 당신의 커리어 성장을 도울 최적의 프로그램을 제공합니다. 지금, 미래를 바꾸세요.</h3>
     </section>
   </header>
