--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" type="text/css" href="components/bootstrap/dist/css/bootstrap.min.css">
   <!-- BOOTSTRAP CUSTOM THEME gen by http://bootstrap-live-customizer.com-->
   <link rel="stylesheet" type="text/css" href="css/theme.min.css">
+  <!--<link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap-theme.min.css">-->
   <!-- BOOTSTRAP DRAWER -->
   <link rel="stylesheet" type="text/css" href="components/bootstrap-drawer/dist/css/bootstrap-drawer.min.css">
 
@@ -37,19 +38,85 @@
   <script src="/index.js"></script>
 
   <style>
+    @import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+    * {
+      font-family: 'Nanum Gothic', sans-serif;
+    }
+    b {
+      font-weight: 900;
+    }
+    h1 {
+      line-height: 1.2em;
+      font-weight: 400;
+      font-size: 3em;
+      max-width: 700px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    h2 {
+      line-height: 1.3em;
+      font-weight: 400;
+      font-size: 2em;
+      max-width: 700px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    h3 {
+      line-height: 1.4em;
+      font-weight: 400;
+      font-size: 1.5em;
+      max-width: 700px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    h4 {
+      line-height: 1.5em;
+      font-weight: 400;
+      font-size: 1.2em;
+      max-width: 700px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      text-align: center;
+    }
+    .btn-default {
+      color: #ffffff;
+      background-color: #26a69a;
+      border: none;
+      padding-left: 28px;
+      padding-right: 28px;
+    }
+    .btn-default:hover {
+      color: #ffffff;
+      background-color: #26a69a;
+      border: none;
+    }
+    .btn-default:focus {
+      color: #ffffff;
+      background-color: #26a69a;
+      border: none;
+    }
+  </style>
+  <style>
     #backgroundVideo {
       position: absolute;
       top: 0px;
       left: 0px;
       width: 100%;
-      max-height: 700px;
+      max-height: 650px;
       z-index: -1;
       overflow: hidden;
     }
     #backgroundVideo img {
       width: 100%;
       height: auto;
-      min-height: 700px;
+      min-height: 650px;
       min-width: 1250px;
     }
     .video-glass {
@@ -64,7 +131,7 @@
       width: 100%;
       height: 100%;
       min-width: 1250px;
-      min-height: 700px;
+      min-height: 650px;
     }
   </style>
   <!-- BACKGROUND VIDEO FALLBACK -->
@@ -85,7 +152,6 @@
       color: #ffffff;
     }
     nav.main-menu {
-      position: absolute;
       margin-top: 20px;
     }
     nav.main-menu span {
@@ -102,13 +168,11 @@
   </style>
   <style>
     header {
-      margin-top: 120px;
       text-align: center;
-      padding-left: 15%;
-      padding-right: 15%;
+      height: 503px;
     }
     header h3 {
-      margin: 20px 0px 20px 0px;
+      margin: 50px auto 50px auto;
     }
     header figure img {
       display: block;
@@ -117,9 +181,127 @@
       width: 315px;
     }
   </style>
-  <script>
-
-  </script>
+  <style>
+    .catchphrase {
+      background-color: #37474f;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+    .catchphrase h1 {
+      text-align: center;
+    }
+    .catchphrase h3 {
+      text-align: center;
+    }
+  </style>
+  <style>
+    .customer {
+      color: #000000;
+      padding-top: 30px;
+      padding-bottom: 30px;
+    }
+    .customer section {
+      padding: 20px;
+    }
+    .customer span {
+      line-height: 2em;
+    }
+    .customer h1 {
+      color: rgba(31,85,95,1);
+    }
+    .customer img {
+      width: 100%;
+    }
+    .customer h2 {
+      text-align: center;
+      color: #80cbc4;
+    }
+  </style>
+  <style>
+    .howitworks {
+      background-color: rgb(108, 169, 153);
+    }
+    .howitworks img {
+      width: 100%;
+    }
+  </style>
+  <style>
+    .service {
+      background-color: #37474f;
+    }
+    .right-border {
+      border-right: solid 1px gray;
+    }
+    .service section {
+      padding: 20px 30px 20px 30px;
+    }
+    .service hr {
+      width: 30px;
+    }
+    .service h3 {
+      text-align: center;
+    }
+    .service ul {
+      list-style-type: none;
+      min-height: 200px;
+    }
+    .service li {
+      line-height: 2em;
+    }
+    .service li:before {
+      content: "-";
+    }
+    .service button {
+      display: block;
+      margin: auto;
+    }
+  </style>
+  <style>
+    .instructor {
+      padding: 30px 0px 50px 0px;
+    }
+    .instructor h1 {
+      width: 100%;
+      font-weight: 600;
+      max-width: 100%;
+      text-align: left;
+      color: #80cbc4;
+      margin-bottom: 20px;
+    }
+    .instructor .circle {
+      border-radius: 50%;
+      width: 180px;
+      height: 180px;
+      background-color: #cfd8dc;
+      display: block;
+      margin: auto;
+    }
+  </style>
+  <style>
+    .contacts {
+      color: #e0e0e0;
+      background-color: #455a64;
+      padding: 30px 0px 30px 0px;
+    }
+    .contacts h3 {
+      width: 100%;
+      font-weight: 600;
+      max-width: 100%;
+      text-align: left;
+    }
+    .contacts section > span {
+      line-height: 2em;
+    }
+    .contacts section > div {
+      padding: 10px 0px 10px 0px;
+    }
+  </style>
+  <style>
+    footer {
+      background-color: #80cbc4;
+      padding: 20px 0px 20px 0px;
+    }
+  </style>
 </head>
 <body class="has-drawer">
 <!-- BACK GROUND -->
@@ -164,141 +346,155 @@
   </div>
 </div>
 <!-- drawer end -->
-<!-- content start -->
-<div class="container">
-  <!-- COMMON TOP MENU -->
-  <nav class="main-menu container">
-    <!-- MOBILE TOP MENU -->
-    <div class="row visible-xs-block visible-sm-block">
-      <span class="col-sm-1">menu</span>
-      <span class="col-sm-10">logo</span>
-      <span class="col-sm-1">SignIn</span>
+
+<!-- COMMON TOP MENU -->
+<nav class="main-menu container">
+  <!-- MOBILE TOP MENU -->
+  <div class="row visible-xs-block visible-sm-block">
+    <span class="col-sm-1 col-xs-1">menu</span>
+    <span class="col-sm-10 col-xs-10">logo</span>
+    <span class="col-sm-1 col-xs-1">SignIn</span>
+  </div>
+  <!-- DESKTOP TOP MENU -->
+  <div class="row visible-md-block visible-lg-block">
+    <div class="col-md-5">
+      <span class="col-md-3">Bootcamp</span>
+      <span class="col-md-3">Courses</span>
+      <span class="col-md-3">Events</span>
+      <span class="col-md-3">Alumni</span>
     </div>
-    <!-- DESKTOP TOP MENU -->
-    <div class="row visible-md-block visible-lg-block">
-      <div class="col-md-5">
-        <span class="col-md-3">Bootcamp</span>
-        <span class="col-md-3">Courses</span>
-        <span class="col-md-3">Events</span>
-        <span class="col-md-3">Alumni</span>
-      </div>
-      <div class="col-md-2">
-        <img class="logo" src="img/logo.png">
-      </div>
-      <div class="col-md-5">
-        <span class="col-md-3">Team</span>
-        <span class="col-md-3">Contacts</span>
-        <span class="col-md-3"></span>
-        <span class="col-md-3">SignIn</span>
+    <div class="col-md-2">
+      <img class="logo" src="img/logo.png">
+    </div>
+    <div class="col-md-5">
+      <span class="col-md-3">Team</span>
+      <span class="col-md-3">Contacts</span>
+      <span class="col-md-3"></span>
+      <span class="col-md-3">SignIn</span>
+    </div>
+  </div>
+</nav>
+
+<!-- PROMOTE -->
+<header class="container">
+  <section>
+    <figure>
+      <img src="img/logo2.png">
+    </figure>
+    <h1><b>당신의 미래를 바꿉니다.</b></h1>
+    <h3>Headstart는 Data Science에 관한 당신의 커리어 성장을 도울 최적의 프로그램을 제공합니다. 지금, 미래를 바꾸세요.</h3>
+  </section>
+</header>
+<main>
+  <!-- CATCHPHRASE -->
+  <article class="catchphrase">
+    <div class="container">
+      <h1>헤드스타트는 한국 <b>데이터사이언스</b> 교육의 <b>기준</b>입니다.</h1>
+      <h3>Headstart is standard of Data science in Korea.</h3>
+    </div>
+  </article>
+  <!-- CUSTOMER -->
+  <article class="customer">
+    <div class="container">
+      <h1>당신만을 위한 <b>커리큘럼을</b> 제공합니다.</h1>
+      <div class="row">
+        <section class="col-md-4">
+          <figure>
+            <img src="img/info1.png"/>
+          </figure>
+          <h2>학생</h2>
+          <span>Headstart는 미국IT 기업의 업무진행방식을 직접 경험할 수 있는 Project를 통한 실습 및 인턴쉽을 제공하며 현장실습교과목을 통한 학점인정이 가능합니다. Headstart는 실제 업무에 사용되는 프로그래밍 역량을 강화하고 취업에 필요한 데이터 포트폴리오를 완성하여 취업까지 이어질 수 있도록 지원해 드립니다.</span>
+        </section>
+        <section class="col-md-4">
+          <figure>
+            <img src="img/info2.png"/>
+          </figure>
+          <h2>일반인</h2>
+          <span>현업에서 업무역량을 키우고 싶으신 분, 데이터분석가로 커리어 전환하고 싶으신 분, 효율적인 데이터 분석과 실무적용을 위해 Data Science에 대한 Project를 진행합니다. Data Scientist로의 지름길을 찾아 가는데 Headstart 가 함께하겠습니다.</span>
+        </section>
+        <section class="col-md-4">
+          <figure>
+            <img src="img/info3.png"/>
+          </figure>
+          <h2>기업</h2>
+          <span>Headstart는 실제 미국 IT기업이 데이터를 분석하는 방법과 데이터 활용사례를 기반으로 차별화된 Data Science 관련 사내 교육을 진행합니다. 무수한 데이터 속 올바른 결정을 내리기 힘든 경우, HEADSTART와의 아웃소싱을 통해 최상의 결과를 만들어보십시오.</span>
+        </section>
       </div>
     </div>
-  </nav>
-  <!-- PROMOTE -->
-  <header>
-    <section>
-      <figure>
-        <img src="img/logo2.png">
-      </figure>
-      <h1>당신의 미래를 바꿉니다.</h1>
-      <h3>Headstart는 Data Science에 관한 당신의 커리어 성장을 도울 최적의 프로그램을 제공합니다. 지금, 미래를 바꾸세요.</h3>
+  </article>
+  <!-- HOW IT WORKS -->
+  <article class="howitworks">
+    <img src="img/howitworks.png"/>
+  </article>
+  <!-- SERVICE -->
+  <article class="service row">
+    <section class="col-md-4 right-border">
+      <hr />
+      <h3>BOOTCAMP</h3>
+      <span>
+        <ul>
+          <li>Short Term Intensive Camp</li>
+          <li>기초 통계, 데이터 수집, 데이터 분석, 데이터 시각화</li>
+          <li>정형화 모델 형성</li>
+          <li>Whiteboarding 을 통한 문제 해결 능력 향상</li>
+          <li>실리콘 밸리 전문가와의 네트워킹</li>
+        </ul>
+      </span>
+      <button class="btn btn-default">MORE</button>
     </section>
-  </header>
-  <main>
-    <!-- C2 -->
-    <article>
-      <p>헤드스타트는 한국 데이터사이언스 교육의 기준입니다.</p>
-      <p>Headstart is standard of Data science in Korea.</p>
-    </article>
-    <!-- C3 -->
-    <article>
-      <p>당신만을 위한 커리큘럼을 제공합니다.</p>
-      <section>
-        <figure>
-          <img src="">
-        </figure>
-        <h4>학생</h4>
-        <span>Headstart는 미국IT 기업의 업무진행방식을 직접 경험할 수 있는 Project를 통한 실습 및 인턴쉽을 제공하며 현장실습교과목을 통한 학점인정이 가능합니다. Headstart는 실제 업무에 사용되는 프로그래밍 역량을 강화하고 취업에 필요한 데이터 포트폴리오를 완성하여 취업까지 이어질 수 있도록 지원해 드립니다.</span>
-      </section>
-      <section>
-        <figure>
-          <img src="">
-        </figure>
-        <h4>일반인</h4>
-        <span>현업에서 업무역량을 키우고 싶으신 분, 데이터분석가로 커리어 전환하고 싶으신 분, 효율적인 데이터 분석과 실무적용을 위해 Data Science에 대한 Project를 진행합니다. Data Scientist로의 지름길을 찾아 가는데 Headstart 가 함께하겠습니다.</span>
-      </section>
-      <section>
-        <figure>
-          <img src="">
-        </figure>
-        <h4>기업</h4>
-        <span>Headstart는 실제 미국 IT기업이 데이터를 분석하는 방법과 데이터 활용사례를 기반으로 차별화된 Data Science 관련 사내 교육을 진행합니다. 무수한 데이터 속 올바른 결정을 내리기 힘든 경우, HEADSTART와의 아웃소싱을 통해 최상의 결과를 만들어보십시오.</span>
-      </section>
-    </article>
-    <!-- HOW IT WORKS -->
-    <article>
-      <figure>
-        <img src="">
+    <section class="col-md-4 right-border">
+      <hr />
+      <h3>PROJECT</h3>
+      <span>
+        <ul>
+          <li>현직 전문가의 Project Managing</li>
+          <li>전달식 강의를 벗어난 실전 Project 참여</li>
+          <li>미국 IT 기업 업무 Process 적용</li>
+          <li>Project 결과 Portfolio 제작</li>
+          <li>수준별 Project 참여</li>
+          <li>Expert Level 기업 Project 참여</li>
+        </ul>
+      </span>
+      <button class="btn btn-default">MORE</button>
+    </section>
+    <section class="col-md-4">
+      <hr />
+      <h3>ONLINE</h3>
+      <span>
+        <ul>
+          <li>E-mail 을 통한 매일 학습 가능</li>
+          <li>엄선된 Data Structure, Algorithm 문제 제공</li>
+          <li>Data Science 기초 , 실전 Level 학습 제공</li>
+          <li>R, Phython, SQL 학습</li>
+          <li>현직 전문가와의 질의 응답</li>
+        </ul>
+      </span>
+      <button class="btn btn-default">MORE</button>
+    </section>
+  </article>
+  <!-- INSTRUCTOR -->
+  <article class="instructor container">
+    <h1>INSTRUCTOR</h1>
+    <div class="row">
+      <figure class="col-md-3">
+        <img class="circle" src="img/instructor-01.png" />
       </figure>
-    </article>
-    <!-- C5 -->
-    <article>
-      <section>
-        <h4>BOOTCAMP</h4>
-        <span>
-          <ul>
-            <li>Short Term Intensive Camp</li>
-            <li>기초 통계, 데이터 수집, 데이터 분석, 데이터 시각화</li>
-            <li>정형화 모델 형성</li>
-            <li>Whiteboarding 을 통한 문제 해결 능력 향상</li>
-            <li>실리콘 밸리 전문가와의 네트워킹</li>
-          </ul>
-        </span>
-        <button>MORE</button>
-      </section>
-      <section>
-        <h4>PROJECT</h4>
-        <span>
-          <ul>
-            <li>현직 전문가의 Project Managing</li>
-            <li>전달식 강의를 벗어난 실전 Project 참여</li>
-            <li>미국 IT 기업 업무 Process 적용</li>
-            <li>Project 결과 Portfolio 제작</li>
-            <li>수준별 Project 참여</li>
-            <li>Expert Level 기업 Project 참여</li>
-          </ul>
-        </span>
-        <button>MORE</button>
-      </section>
-      <section>
-        <h4>ONLINE</h4>
-        <span>
-          <ul>
-            <li>E-mail 을 통한 매일 학습 가능</li>
-            <li>엄선된 Data Structure, Algorithm 문제 제공</li>
-            <li>Data Science 기초 , 실전 Level 학습 제공</li>
-            <li>R, Phython, SQL 학습</li>
-            <li>현직 전문가와의 질의 응답</li>
-          </ul>
-        </span>
-        <button>MORE</button>
-      </section>
-    </article>
-    <!-- INSTRUCTOR -->
-    <article>
-      <figure>
-        <img src="">
+      <figure class="col-md-3">
+        <img class="circle" src="img/instructor-02.png" />
       </figure>
-      <figure>
-        <img src="">
+      <figure class="col-md-3">
+        <img class="circle" src="img/instructor-03.png" />
       </figure>
-      <figure>
-        <img src="">
+      <figure class="col-md-3">
+        <span class="circle"></span>
       </figure>
-    </article>
-    <!-- CONTACTS -->
-    <article>
-      <section>
-        <h4>CONTACTS</h4>
+    </div>
+  </article>
+  <!-- CONTACTS -->
+  <article class="contacts">
+    <div class="container">
+      <section class="col-md-5">
+        <h3>CONTACTS</h3>
         <span>
           Headstart Silicon Valley<br/>
           3350 Thomas rd, Santa Clara 95054<br/>
@@ -306,17 +502,29 @@
           (+1) 408-707-0660
         </span>
       </section>
-      <section>
-        <input type="email">
-        <textarea></textarea>
-        <button>SEND</button>
+      <section class="col-md-7">
+        <!--<label for="basic-url">Your vanity URL</label>-->
+        <div class="input-group">
+          <span class="input-group-addon" id="basic-addon3">email</span>
+          <input type="text" class="form-control" id="basic-url" aria-describedby="basic-addon3">
+        </div>
+        <!--<label for="basic-url2">Your vanity URL</label>-->
+        <div class="input-group">
+          <span class="input-group-addon" id="basic-addon4">message</span>
+          <textarea class="form-control" id="basic-url2" aria-describedby="basic-addon4" rows="5"></textarea>
+        </div>
+        <div>
+          <button class="btn btn-default">SEND</button>
+        </div>
       </section>
-    </article>
-  </main>
-  <footer>
-    Headstart Silicon Valley, Inc, © 2016
-  </footer>
-</div>
+    </div>
+  </article>
+</main>
+<footer>
+  <div class="container">
+    Headstart Silicon Valley, Inc. © 2016
+  </div>
+</footer>
 <!-- content end -->
 </body>
 </html>
